# helix-agent

./: .gitignore  Cargo.toml  README.md  helix.toml  rust-toolchain.toml
.cargo/: config.toml
scripts/: gen_queries.mjs
src/: agent.rs  db.rs  embed.rs  llm.rs  main.rs
